# quick-lint-js

./: .clang-format  .editorconfig  .git-bisect-ignore  .gitattributes  .gitignore  .gitlab-ci.yml  .hdoc.toml  .travis.yml  CMakeLists.txt  README.md  default.nix  flake.nix  robert.txt  test-parse-warning.cpp  test.js  testgfkjlhg  version
benchmark/: CMakeLists.txt  README.md  README.txt  benchmark-cli-location.cpp  benchmark-configuration-loader.cpp  benchmark-configuration.cpp  benchmark-document.cpp  benchmark-lex.cpp  benchmark-lint.cpp  benchmark-location.cpp  benchmark-lsp-document-text.cpp  benchmark-lsp-document.cpp  benchmark-lsp-location.cpp  benchmark-lsp.cpp  benchmark-parse.cpp  benchmark-translation.cpp  benchmark-utf-8.cpp  benchmark-vector-profiler.cpp  benchmark-vim-location.cpp  generate-code.cpp
benchmark/benchmark-lsp/: .hindent.yaml  CMakeLists.txt  COPYING  LSPBenchmark.hs  LSPClient.hs  LSPDecode.hs  Main.hs  README.md  Setup.hs  benchmark-config.cpp  benchmark-config.json  benchmark-lsp.cabal  generate-benchmark-html  lsp-benchmarks.cpp  lsp-server-process.cpp  main.cpp  package.yaml  process.cpp  stack.yaml
benchmark/quick-lint-js/: generate-code.h
completions/: CMakeLists.txt  README.md  _quick-lint-js  quick-lint-js.bash  quick-lint-js.fish  quick-lint-js.ps1
demo/: .gitignore  CMakeLists.txt  cli.mjs  editor.mjs  index.html  package.json  prepare-for-publish  quick-lint-js.mjs  test.mjs  wasm-demo.cpp
docs/: AUTHORS.md  BUILDING.md  CHANGELOG.md  CLA-v1.md  CMakeLists.txt  CODE_SIGNING.md  COMPLETIONS.md  CONTRIBUTING.md  CreateVersion.py  FUZZING.md  INFRASTRUCTURE.md  INSTALLING.md  RELEASE.md  RELEASES.md  SUBLIME_TEXT.md  TRACING.md  TRANSLATING.md  cli.adoc  config.adoc  error-documentation.cpp  generate-error-docs.cpp  lsp.adoc  profiling.md  quick-lint-js.1  quick-lint-js.config.5  quick-lint-js.config.schema.json
docs/architecture/: ADR001-Feature-testing-with-have-h.md  ADR002-Programming-language.md  ADR003-Vendor-sources.md  ADR004-Generated-sources.md  ADR005-Incremental-lexing.md  ADR006-Location-tracking.md  ADR007-Expression-stack.md  ADR008-Exceptions.md  ADR009-Website.md  ADR010-LSP-server.md  ADR011-IO-errors.md  ADR012-Assertions.md  ADR013-Dependencies.md  ADR014-Plugins.md  ADR015-Logging-and-tracing.md  ADR016-Collections.md  ADR016-Lexer-tables.md  ADR017-Lexer-tables.md  ADR018-Naming-style.md  ARD019-IO-manager.md  README.md
docs/errors/: E0001.md  E0002.md  E0003.md  E0004.md  E0005.md  E0006.md  E0007.md  E0008.md  E0009.md  E001.md  E0010.md  E0011.md  E0012.md  E0013.md  E0014.md  E0015.md  E0016.md  E0017.md  E0018.md  E0019.md  E002.md  E0020.md  E0021.md  E0022.md  E0023.md  E0024.md  E0025.md  E0026.md  E0027.md  E0028.md  E0029.md  E003.md  E0030.md  E0031.md  E0032.md  E0033.md  E0034.md  E0035.md  E0036.md  E0037.md  (+518 more)
docs/man/: .gitignore  generate-man-pages  quick-lint-js-lsp.8  quick-lint-js.1  quick-lint-js.config.5
docs/quick-lint-js/: error-documentation.h
docs/quick-release-notes/: INSTRUCTIONS.md  main.go
fuzz/: CMakeLists.txt  README.txt  fuzz-configuration-json.cpp  fuzz-lex.cpp  fuzz-lsp-message-parser.cpp  fuzz-lsp-server.cpp  fuzz-options.cpp  fuzz-parse-lint.cpp  fuzz-parse.cpp  fuzz-utf-8-decode-encode.cpp  fuzz-utf-8-lsp.cpp
plugin/emacs/: .gitignore  CMakeLists.txt  README.md  create-archive  eglot-quicklintjs.el  flycheck-quicklintjs.el  (+6 more)
src/: CMakeLists.txt  README.txt  add.cpp  arg-parser.cpp  asprintf.cpp  assert.cpp  async-byte-queue.cpp  basic-configuration-filesystem.cpp  boost-json.cpp  boost.cpp  buffering-diag-reporter.cpp  buffering-error-reporter.cpp  buffering-visitor.cpp  byte-buffer.cpp  c-api-diag-reporter.cpp  c-api-error-reporter.cpp  c-api.cpp  change-detecting-filesystem-inotify.cpp  change-detecting-filesystem-kqueue.cpp  change-detecting-filesystem-win32.cpp  char8-debug.cpp  char8.cpp  cli-location-debug.cpp  cli-location.cpp  configuration-loader.cpp  configuration.cpp  crash-handling.cpp  crash.cpp  diag-code-list.cpp  diag-debug.cpp  diagnostic-formatter.cpp  diagnostic.cpp  document.cpp  emacs-lisp-diag-reporter.cpp  emacs-lisp-error-reporter.cpp  emacs-location.cpp  error-collector.cpp  error-debug.cpp  error-formatter.cpp  error-list.cpp  (+86 more)
test/: CMakeLists.txt  README.md  diag-collector.cpp  diag-matcher.cpp  diagnostic-assertion.cpp  error-collector.cpp  error-matcher.cpp  failing-diag-reporter.cpp  fake-configuration-filesystem.cpp  filesystem-test.cpp  js-corpus.go  lint-support.cpp  parse-json.cpp  parse-support.cpp  pipe.cpp  spy-visitor.cpp  temporary-directory.cpp  test-array.cpp  test-assert.cpp  test-async-byte-queue.cpp  test-bit.cpp  test-buffering-diag-reporter.cpp  test-buffering-error-reporter.cpp  test-buffering-visitor-stack.cpp  test-buffering-visitor.cpp  test-byte-buffer.cpp  test-c-api-error-reporter.cpp  test-c-api.cpp  test-c-string-list.cpp  test-cli-location.cpp  test-cli.cpp  test-cli.py  test-concat.cpp  test-configuration-loader.cpp  test-configuration.cpp  test-constant-divider.cpp  test-crash.cpp  test-cxx-parser.cpp  test-debug-server.cpp  test-diag-code-list.cpp  (+178 more)
tools/: .gitignore  CMakeLists.txt  README.txt  add-version-numbers-to-error-docs.py  add_error_type.py  aggregate-binary-sizes  analyze-trace.cpp  check-esprima  check-file-copyrights  check-links  check-test262  check-test262.go  check-test262_test.go  collect-binary-sizes  collect-copyright  compile-translations  compile-translations.cpp  compile-translations.go  compile-translations_test.go  create-translation  download-js-corpus.go  dump-gmo.cpp  extract-translatable-strings.cpp  files.sh  fix-include-guards.go  fix-include-guards_test.go  format  generate-benchmark-html  generate-cli-docs  generate-diagnostic-metadata.cpp  generate-lex-keyword  generate-lex-keyword.cpp  generate-lex-tables.cpp  generate-lex-unicode  generate-man-pages  generate-trace-sources.cpp  generate-vim-tags  gmo.bt  lines-of-code  prune-old-builds.py  (+9 more)
wasm/: CMakeLists.txt  README.md  cli.js  empty.cpp  node-fs.cpp  package.json  quick-lint-js.js  run-tests.js  test-document.js
(+1400 files in other folders)
